--- a/01-point-pattern-analysis-vignette.qmd
+++ b/01-point-pattern-analysis-vignette.qmd
@@ -29,7 +29,7 @@ On this central object, various `spatstat` metrics can be calculated.
 
 ![Structure of a `SpatialExperiment` object as introduced by Righelli et al.](https://raw.githubusercontent.com/drighelli/SpatialExperiment/devel/vignettes/SPE.png)
 
-Often, the starting point in spatial omics data analysis is a `SpatialExperiment` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data.
+Often, the starting point in spatial omics data analysis is a `SpatialExperiment` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data. The data we consider here is a MERFISH assay of a mouse preoptic hypothalamus [@chenSpatiallyResolvedHighly2015] [@moffittMolecularSpatialFunctional2018].
 
 ```{r}
 #| label: load packages
@@ -128,11 +128,11 @@ The next concept that defines a point pattern is that marks can be associated wi
 unmark(pp_sub) |> plot()
 ```
 
-Marks can be univariate or multivariate variables that are associated with the points [@baddeleySpatialPointPatterns2015, pp. 147, pp. 563]. In the context of cell biology we can distinguish between discrete marks (e.g. cell types) or continuous marks (e.g. gene expression).
+Marks can be univariate or multivariate variables that are associated with the points [@baddeleySpatialPointPatterns2015, pp. 147]. In the context of cell biology we can distinguish between discrete marks (e.g. cell types) or continuous marks (e.g. gene expression).
 
 #### Discrete Marks
 
-In our example, we have a multitype point pattern, meaning there are different cell types that serve as marks for the point pattern. Multitype means that we consider all marks together. The opposite is multivariate, where we consider the marks independently [@baddeleySpatialPointPatterns2015, pp. 565 ff.].
+In our example, we have a multitype point pattern, meaning there are different cell types that serve as marks for the point pattern. Multitype means that we consider all marks together. The opposite is multivariate, where we consider the marks independently [@baddeleySpatialPointPatterns2015, pp. 564 ff.].
 
 First the multitype case:
 
@@ -237,7 +237,7 @@ We note that the gene `Esr1` is differentially distributed across the slices of 
 
 #### Correlation
 
-Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$, which is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204].
+Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$, which is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204] [@ripleySecondOrderAnalysisStationary1976a].
 
 ##### Global Measures
 
@@ -253,7 +253,7 @@ In the formula above we note a few things:
 
 -   the term $e_{ij}(r)$ is an edge correction - see the section on `border corrections` further down in the vignette [@baddeleySpatialPointPatterns2015, pp. 204].
 
-Ripley's $K$ function can be variance stabilised, which is referred to as Besag's $L$ [@caneteSpicyRSpatialAnalysis2022]. The idea behind variance stabilisation is to "uncouple" the relationship between mean and variance. By taking the square root of the function in question, the variance is nearly constant across the function [@bartlettUseTransformations1947].
+Ripley's $K$ function can be variance stabilised, which is referred to as Besag's $L$ [@caneteSpicyRSpatialAnalysis2022] [@besag1977contribution]. The idea behind variance stabilisation is to "uncouple" the relationship between mean and variance. By taking the square root of the function in question, the variance is nearly constant across the function [@bartlettUseTransformations1947].
 
 $$
 L(r) = \sqrt{\frac{K(r)}{\pi}}
@@ -340,7 +340,7 @@ get_sel <- dfm %>%
 dfm <- dfm %>% left_join(get_sel)
 
 p <- ggplot(dfm, aes(x = r, y = value, group = variable, colour = sel)) +
-  geom_line(linewidth = 2) +
+  geom_line(linewidth = 1) +
   scale_color_continuous(type = "viridis") +
   geom_vline(xintercept = 200) +
   theme(legend.position = "none") +
@@ -351,11 +351,11 @@ p <- ggplot(dfm, aes(x = r, y = value, group = variable, colour = sel)) +
 p
 ```
 
-These curves could be analysed using tools from functional data analysis such as functional PCA [@baddeleySpatialPointPatterns2015 pp. 247-248][@ramsayPrincipalComponentsAnalysis2005].
+These curves could be analysed using tools from functional data analysis such as functional PCA [@baddeleySpatialPointPatterns2015 pp. 247-248] [@ramsayPrincipalComponentsAnalysis2005].
 
 ### Cross Mark Comparison
 
-The same analysis as above can be performed between two celltypes. The corresponding functions are called cross functions. As an exercise, try to implement (similar to the analysis above) a cross comparison between two cell types of interest. With the provided functions this is possible, just give a function you like as input and a vector with two cell types you wish to compare. You can look at functions in the documentation of `spatstat.explore`. We provide an example below:
+The same analysis as above can be performed between two celltypes. The corresponding functions are called cross functions [@baddeleySpatialPointPatterns2015 pp. 594 ff.]. As an exercise, try to implement (similar to the analysis above) a cross comparison between two cell types of interest. With the provided functions this is possible, just give a function you like as input and a vector with two cell types you wish to compare. You can look at functions in the documentation of `spatstat.explore`. We provide an example below:
 
 ```{r, message = FALSE, warning=FALSE, fig.height=5, fig.width=10, results='hide'}
 res <- calcMetric("Lcross", pp_ls, by = zstack_list, 
