changed some references and added DOIs

--- a/misc/PASTA.bib
+++ b/misc/PASTA.bib
@@ -58,6 +58,7 @@
   edition = {1},
   publisher = {CRC Press, Taylor \& Francis Group},
   isbn = {78-1-4822-1021-7},
+  doi = {10.1201/b19708},
   langid = {english}
 }
 
@@ -586,6 +587,23 @@
   file = {/Users/memons/Zotero/storage/FMIEWJ6L/Giesen et al. - 2014 - Highly multiplexed imaging of tumor tissues with s.pdf}
 }
 
+@misc{grettonKernelMethodTwoSample2008,
+  title = {A {{Kernel Method}} for the {{Two-Sample Problem}}},
+  author = {Gretton, Arthur and Borgwardt, Karsten and Rasch, Malte J. and Scholkopf, Bernhard and Smola, Alexander J.},
+  year = {2008},
+  month = may,
+  number = {arXiv:0805.2368},
+  eprint = {0805.2368},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  urldate = {2024-06-18},
+  abstract = {We propose a framework for analyzing and comparing distributions, allowing us to design statistical tests to determine if two samples are drawn from different distributions. Our test statistic is the largest difference in expectations over functions in the unit ball of a reproducing kernel Hilbert space (RKHS). We present two tests based on large deviation bounds for the test statistic, while a third is based on the asymptotic distribution of this statistic. The test statistic can be computed in quadratic time, although efficient linear time approximations are available. Several classical metrics on distributions are recovered when the function space used to compute the difference in expectations is allowed to be more general (eg. a Banach space). We apply our two-sample tests to a variety of problems, including attribute matching for databases using the Hungarian marriage method, where they perform strongly. Excellent performance is also obtained when comparing distributions over graphs, for which these are the first such tests.},
+  archiveprefix = {arxiv},
+  langid = {english},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning,G.3,I.2.6},
+  file = {/Users/memons/Zotero/storage/EMHT42LA/Gretton et al. - 2008 - A Kernel Method for the Two-Sample Problem.pdf}
+}
+
 @article{gutMultiplexedProteinMaps2018,
   title = {Multiplexed Protein Maps Link Subcellular Organization to Cellular States},
   author = {Gut, Gabriele and Herrmann, Markus D. and Pelkmans, Lucas},
@@ -817,7 +835,7 @@
   copyright = {2023 The Author(s)},
   langid = {english},
   keywords = {Bioinformatics,Cell signalling,Cellular signalling networks,Computational biology and bioinformatics,Statistical methods},
-  file = {/Users/memons/Zotero/storage/WDTE8SIR/Li et al. - 2023 - SpatialDM for rapid identification of spatially co.pdf}
+  file = {/Users/memons/Zotero/storage/77U2QX8Y/s41467-023-39608-w.pdf}
 }
 
 @article{liuEpigeneticReprogrammingShapes2024,
@@ -1182,7 +1200,8 @@
   year = {2005},
   journal = {Functional data analysis},
   pages = {147--172},
-  publisher = {Springer}
+  publisher = {Springer},
+  doi = {10.1007/0-387-22751-2_8}
 }
 
 @article{raoExploringTissueArchitecture2021,
