--- a/01-point-pattern-analysis-vignette.qmd
+++ b/01-point-pattern-analysis-vignette.qmd
@@ -29,7 +29,7 @@ On this central object, various `spatstat` metrics can be calculated.
 
 ![Structure of a `SpatialExperiment` object as introduced by Righelli et al.](https://raw.githubusercontent.com/drighelli/SpatialExperiment/devel/vignettes/SPE.png)
 
-Often, the starting point in spatial omics data analysis is a `SpatialExperiment` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data. The data we consider here is a MERFISH assay of a mouse preoptic hypothalamus [@chenSpatiallyResolvedHighly2015] [@moffittMolecularSpatialFunctional2018].
+Often, the starting point in spatial omics data analysis is a `SpatialExperiment` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data. The data we consider here is a MERFISH assay of a mouse preoptic hypothalamus [@chenSpatiallyResolvedHighly2015; @moffittMolecularSpatialFunctional2018].
 
 ```{r}
 #| label: load packages
@@ -150,7 +150,7 @@ pp_sub |>
 
 #### Continuous Marks
 
-Marks can as well be continuous as in the case of gene expression. We choose some genes from the original paper and look at their distribution [@baddeleySpatialPointPatterns2015 pp. 637] [@moffittMolecularSpatialFunctional2018].
+Marks can as well be continuous as in the case of gene expression. We choose some genes from the original paper and look at their distribution [@baddeleySpatialPointPatterns2015 pp. 637; @moffittMolecularSpatialFunctional2018].
 
 ```{r}
 # subset the original SpatialExperiment to our example slide -0.09
@@ -237,7 +237,7 @@ We note that the gene `Esr1` is differentially distributed across the slices of 
 
 #### Correlation
 
-Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$, which is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204] [@ripleySecondOrderAnalysisStationary1976a].
+Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$, which is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204; @ripleySecondOrderAnalysisStationary1976a].
 
 ##### Global Measures
 
@@ -253,7 +253,7 @@ In the formula above we note a few things:
 
 -   the term $e_{ij}(r)$ is an edge correction - see the section on `border corrections` further down in the vignette [@baddeleySpatialPointPatterns2015, pp. 204].
 
-Ripley's $K$ function can be variance stabilised, which is referred to as Besag's $L$ [@caneteSpicyRSpatialAnalysis2022] [@besag1977contribution]. The idea behind variance stabilisation is to "uncouple" the relationship between mean and variance. By taking the square root of the function in question, the variance is nearly constant across the function [@bartlettUseTransformations1947].
+Ripley's $K$ function can be variance stabilised, which is referred to as Besag's $L$ [@caneteSpicyRSpatialAnalysis2022; @besag1977contribution]. The idea behind variance stabilisation is to "uncouple" the relationship between mean and variance. By taking the square root of the function in question, the variance is nearly constant across the function [@bartlettUseTransformations1947].
 
 $$
 L(r) = \sqrt{\frac{K(r)}{\pi}}
@@ -351,7 +351,7 @@ p <- ggplot(dfm, aes(x = r, y = value, group = variable, colour = sel)) +
 p
 ```
 
-These curves could be analysed using tools from functional data analysis such as functional PCA [@baddeleySpatialPointPatterns2015 pp. 247-248] [@ramsayPrincipalComponentsAnalysis2005].
+These curves could be analysed using tools from functional data analysis such as functional PCA [@baddeleySpatialPointPatterns2015 pp. 247-248; @ramsayPrincipalComponentsAnalysis2005].
 
 ### Cross Mark Comparison
 
