--- a/01-point-pattern-analysis-vignette.qmd
+++ b/01-point-pattern-analysis-vignette.qmd
@@ -17,19 +17,19 @@ Cells (or transcripts) can be approximated as points given their location.
 
 ### `spatstat` package and `ppp` object
 
-The central package to analyse point patterns in `R` is called `spatstat` [@baddeleySpatstatPackageAnalyzing2005]. The main data object to compute on is called a `ppp` object. `ppp` objects describe point patterns in two dimensional space, `ppx` objects create multidimensional point patterns. A `ppp` object is is made up of three specifications [@baddeleySpatstatPackageAnalyzing2005]:
+The central package to analyse point patterns in `R` is called `r BiocStyle::CRANpkg('spatstat')` [@baddeleySpatstatPackageAnalyzing2005]. The main data object to compute on is called a `ppp` object. `ppp` objects describe point patterns in two dimensional space, `ppx` objects create multidimensional point patterns. A `ppp` object is is made up of three specifications [@baddeleySpatstatPackageAnalyzing2005]:
 
 -   The locations of the points in question ($x$,$y$ and, optionally, $z$ coordinates)
 -   The observation window
 -   The associated marks to each point in the pattern
 
-On this central object, various `spatstat` metrics can be calculated.
+On this central object, various `r BiocStyle::CRANpkg('spatstat')` metrics can be calculated.
 
 ### `SpatialExperiment` Object
 
 ![Structure of a `SpatialExperiment` object as introduced by Righelli et al.](https://raw.githubusercontent.com/drighelli/SpatialExperiment/devel/vignettes/SPE.png)
 
-Often, the starting point in spatial omics data analysis is a `SpatialExperiment` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data. The data we consider here is a MERFISH assay of a mouse preoptic hypothalamus [@chenSpatiallyResolvedHighly2015; @moffittMolecularSpatialFunctional2018].
+Often, the starting point in spatial omics data analysis is a `r BiocStyle::Biocpkg('SpatialExperiment')` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data. The data we consider here is a MERFISH assay of a mouse preoptic hypothalamus [@chenSpatiallyResolvedHighly2015; @moffittMolecularSpatialFunctional2018].
 
 ```{r}
 #| label: load packages
@@ -60,9 +60,9 @@ spe <- readRDS("data/spe.rds")
 spe
 ```
 
-We see that we have an object of class `SpatialExperiment` with $161$ genes (rows) and $73655$ cells. This object is very similar to a `SingleCellExperiment` object except it has the added `spatialCoords` slot. One slot in the `colData` is called `sample_id` which defines the so called z-slices. The three dimensional tissue is cut in the z-axis into consecutive two dimensional slices [@righelliSpatialExperimentInfrastructureSpatiallyresolved2022].
+We see that we have an object of class `r BiocStyle::Biocpkg('SpatialExperiment')` with $161$ genes (rows) and $73655$ cells. This object is very similar to a `r BiocStyle::Biocpkg('SingleCellExperiment')` object except it has the added `spatialCoords` slot. One slot in the `colData` is called `sample_id` which defines the so called z-slices. The three dimensional tissue is cut in the z-axis into consecutive two dimensional slices [@righelliSpatialExperimentInfrastructureSpatiallyresolved2022].
 
-Next, we want to extract three slices of this `SpatialExperiment` object and convert the 2D slices into `ppp` objects.
+Next, we want to extract three slices of this `r BiocStyle::Biocpkg('SpatialExperiment')` object and convert the 2D slices into `ppp` objects.
 
 ```{r}
 # define the Z-stacks that you want to compare
@@ -189,14 +189,14 @@ We can compare patterns between marks of the same type. This is referred to as a
 
 ```{r, fig.height=5, fig.width=10}
 # create a dataframe from the point pattern
-pp_df <- lapply(zstack_list, function(x) {
+pp_df_discrete <- lapply(zstack_list, function(x) {
   df <- pp_ls[[x]] %>% as.data.frame()
   df$stack <- x
   return(df)
 }) %>% bind_rows()
 
 # select OD Mature cells
-pp_df_odmature <- pp_df[pp_df$marks == "OD Mature", ]
+pp_df_odmature <- pp_df_discrete[pp_df_discrete$marks == "OD Mature", ]
 
 ggplot(pp_df_odmature, aes(x, y, colour = marks)) +
   geom_point(size = 0.5) +
@@ -277,7 +277,9 @@ q <- ggplot(res2, aes(r, iso, colour = stack)) +
 p | q
 ```
 
-Your turn: Try to compare the arrangement of `Ependymal` cells across these three sections. You can choose any function you might find in the documentation of `spatstat.explore`.
+The strongest estimate of association between oligodendrocytes is found for the slices $0.01$. Slice $0.21$ does not show such a high degree of association at radii $\leq300$ as the other two slices. This means that the apparent clustering we see in the distribution of points is mainly due to an overall higher number of cells in slide $0.21$ and not a higher degree of association per se. The black line indicates the expected $K$ respectively $L$ function for a completely spatially random poisson process [@baddeleySpatialPointPatterns2015, pp. 132 ff.].
+
+Your turn: Try to compare the arrangement of `Ependymal` cells across these three sections. You can choose any function you might find in the documentation of `r BiocStyle::CRANpkg('spatstat.explore')`.
 
 ```{r, eval=FALSE}
 res <- calcMetric(...)
@@ -321,6 +323,8 @@ p <- ggplot(res, aes(r, iso, colour = stack)) +
 p
 ```
 
+We note that at very small radii the expression of the gene `Esr1` shows a high association with itself. Later on, the association is less pronounced than in the slices $-0.09$ and $0.01$. 
+
 ##### Local Measures
 
 Next to observation window metrics, we can calculate point level statistics as well. One such option is the local indicators of spatial association (LISA). This gives one curve per point in the field of view [@baddeleySpatialPointPatterns2015 pp. 247-248].
@@ -355,7 +359,17 @@ These curves could be analysed using tools from functional data analysis such as
 
 ### Cross Mark Comparison
 
-The same analysis as above can be performed between two celltypes. The corresponding functions are called cross functions [@baddeleySpatialPointPatterns2015 pp. 594 ff.]. As an exercise, try to implement (similar to the analysis above) a cross comparison between two cell types of interest. With the provided functions this is possible, just give a function you like as input and a vector with two cell types you wish to compare. You can look at functions in the documentation of `spatstat.explore`. We provide an example below:
+The same analysis as above can be performed between two celltypes. The corresponding functions are called cross functions [@baddeleySpatialPointPatterns2015 pp. 594 ff.]. As an exercise, try to implement (similar to the analysis above) a cross comparison between two cell types of interest. With the provided functions this is possible, just give a function you like as input and a vector with two cell types you wish to compare. You can look at functions in the documentation of `r BiocStyle::CRANpkg('spatstat.explore')`. We provide an example below:
+
+```{r, message = FALSE, warning=FALSE, fig.height=5, fig.width=10}
+# select OD Mature and Microglia cells
+pp_df_odmature_microglia <- pp_df_discrete[pp_df_discrete$marks %in% c("OD Mature", "Microglia"), ]
+
+ggplot(pp_df_odmature_microglia, aes(x, y, colour = marks)) +
+  geom_point(size = 0.5) +
+  facet_wrap(~stack, scales = "free") +
+  theme(aspect.ratio = 1)
+```
 
 ```{r, message = FALSE, warning=FALSE, fig.height=5, fig.width=10, results='hide'}
 res <- calcMetric("Lcross", pp_ls, by = zstack_list, 
@@ -371,7 +385,9 @@ q <- ggplot(res, aes(r, iso, colour = stack)) +
 q
 ```
 
-Your turn: try to compare the colocalisation of `OD Mature` and `Ependymal`cells. Again, the documentation of `spatstat.explore` will help you to find good cross functions.
+We note that there is not a very strong co-localisation indicated by the $L$ curves between mature oligodendrocytes and microglia cells. If we look at their spatial distribution that makes sense since microglia cells are distributed more or less homogeneously in the respective slices.
+
+Your turn: try to compare the colocalisation of `OD Mature` and `Ependymal`cells. Again, the documentation of `r BiocStyle::CRANpkg('spatstat.explore')` will help you to find good cross functions.
 
 ```{r, eval = FALSE}
 res <- calcMetric(...)
