--- a/02-lattice-data-analysis-vignette.qmd
+++ b/02-lattice-data-analysis-vignette.qmd
@@ -40,12 +40,11 @@ theme_set(theme_light())
 
 ## Setup and Preprocessing
 
-We will load a Visium dataset gereated by [@mckellarLargescaleIntegrationSinglecell2021]. The data shows a sample taken from the tibialis anterior muscle of a mouse.
+We will load a dataset gereated by [@mckellarLargescaleIntegrationSinglecell2021] using the Visium technology [@stahlVisualizationAnalysisGene2016]. The data shows a sample taken from the tibialis anterior muscle of a mouse.
 
 ```{r}
 # Load the dataset
 sfe <- SFEData::McKellarMuscleData(dataset = "full")
-
 # Take spots that are covered with tissue
 sfe_tissue <- sfe[, colData(sfe)$in_tissue]
 # Filter out genes with no counts
@@ -117,8 +116,7 @@ colGraph(sfe_tissue, "visium") <- findVisiumGraph(sfe_tissue)
 plotColGraph(sfe_tissue,
   colGraphName = "visium",
   colGeometryName = "spotPoly"
-) +
-  theme_void()
+) + theme_void()
 ```
 
 In an irregular lattice, the task of finding a spatial neighbourhood matrix is more complex, as different options exist. One option is to base the neighbourhood graph on neighbours that are in direct contact with each other, as implemented in the `poly2nb` method.
@@ -134,14 +132,13 @@ annotGraph(sfe_tissue, "myofiber_poly2nb") <-
 ```
 
 ```{r}
-plotAnnotGraph(sfe_tissue,
+p1 <- plotAnnotGraph(sfe_tissue,
   annotGraphName = "myofiber_poly2nb",
   annotGeometryName = "myofiber_simplified"
-) +
-  theme_void()
+) + theme_void()
 ```
 
-Alternatively, we could take the five nearest neighbours of each cell, which gives a quite distinct graph.
+Alternatively, we could take the five nearest neighbours of each cell.
 
 ```{r}
 annotGraph(sfe_tissue, "knn5") <-
@@ -155,12 +152,19 @@ annotGraph(sfe_tissue, "knn5") <-
 ```
 
 ```{r}
-plotAnnotGraph(sfe_tissue,
+p2 <- plotAnnotGraph(sfe_tissue,
   annotGraphName = "knn5",
   annotGeometryName = "myofiber_simplified"
-) +
-  theme_void()
+) + theme_void()
 ```
+
+As we can see below, the graphs look quite distinct. On the left side, in the contiguous neigbhbour graph (neighbours in direct contact) we can notice the formation of patches, while in the knn graph isolated patches are interconnected.
+
+```{r}
+p1 + p2
+```
+
+
 
 <!-- In the case of Visium data, we don't have cell level gene expression information and therefore continue with the analysis using the spatial analysis of the regularly spaced spots. -->
 
@@ -168,7 +172,7 @@ plotAnnotGraph(sfe_tissue,
 
 Spatial autocorrelation measures the association between spatial units while recognizing that the spatial units are not independent measurements. These measures can be global (summarizing the entire field) or local (providing statistics for individual locations) [@pebesmaSpatialDataScience2023].
 
-# Global Measures
+## Global Measures
 
 Global methods give us an overview over the entire field-of-view and summarize the spatial autocorrelation metric to a single value. The metrics are a function of the weight matrix and the variables of interest. The variables of interest can be gene expression, intensity of a marker or the area of the cell. The global measures can be seen as a weighted average of the local metric, as explained below.
 
@@ -178,7 +182,7 @@ $$\sum_i \sum_j f(x_i,x_j) w_{ij}$$
 
 where $f(x_i,x_j)$ is the measure of association between features of interest and $w_{ij}$ scales the relationship by a spatial weight as defined in the weight matrix $W$ [@zuurAnalysingEcologicalData2007; @pebesmaSpatialDataScience2023].
 
-## Moran's I
+### Moran's I
 
 Moran's I is the most prominent measure of spatial autocorrelation. The values are bounded by $-1$ and $1$. The expected value is close to $0$ for large $n$, the exact value is given by $\mathbb{E}(I) = -1/(n-1)$. A value higher than the expected value indicates spatial auto-correlation. Negative values indicate negative auto-correlation. Spatial auto-correlation means that similar values tend to be found together in the tissue. In fact, Moran's I can be interpreted as the Pearson correlation between the value at location $i$ and the averages value of the neigbours of $i$, (neighbours as defined in the weight matrix $W$) [@moranNotesContinuousStochastic1950].
 
@@ -216,11 +220,11 @@ plotMoranMC(sfe_tissue, c("nCounts", "nGenes"),
 
 Here we can see the Moran's I values for the number of counts and genes that were identified in the Visium dataset and a permutation-based null distribution. As we can see, the Moran's I values both indicates positive spatial autocorrelation and is highly significant. This means that regions with similar count and number of measured gene values tend to cluster together. This is an interesting finding and was observed in other spatial transcriptomic datasets, see [@bhuvaLibrarySizeConfounds2024].
 
-# Local Measures for Univariate Data
+## Local Measures for Univariate Data
 
 Often a global measure is not enough. One number determining e.g. the spatial autocorrelation over an entire tissue slice might not be reflective of tissue heterogeneity. Therefore, local indicators of spatial associations have been developed [@pebesmaSpatialDataScience2023].
 
-## Local Moran's I
+### Local Moran's I
 
 Local Moran's I provides a measure of spatial autocorrelation at each location, highlighting local clusters of similarity or dissimilarity [@anselinLocalIndicatorsSpatial1995]. It is defined as:
 
@@ -237,29 +241,40 @@ sfe_tissue <- runUnivariate(sfe_tissue,
 )
 
 # plot the expression values
-plotSpatialFeature(sfe_tissue,
+pExp <- plotSpatialFeature(sfe_tissue,
   features = c("Myh2"), colGeometryName = "spotPoly",
   swap_rownames = "symbol"
 )
 
 # plot the local Moran's I values
-plotLocalResult(sfe_tissue, "localmoran",
+pLi <- plotLocalResult(sfe_tissue, "localmoran",
   features = c("Myh2"),
   colGeometryName = "spotPoly", swap_rownames = "symbol",
   divergent = TRUE, diverge_center = 0
-)
+) + labs(fill = "li(Myh2)") # specify legend
+
 
 # plot the local Moran's I p-values
-plotLocalResult(sfe_tissue, "localmoran",
+pPval <- plotLocalResult(sfe_tissue, "localmoran",
   features = c("Myh2"), "-log10p_adj",
   colGeometryName = "spotPoly", swap_rownames = "symbol",
   divergent = TRUE, diverge_center = -log10(0.05)
-)
+) + labs(fill = "-log10(p.adj)") # specify legend
+
+# please note that the
+pExp + pLi + pPval
 ```
 
 In the local version of Moran's I, the interpretation is the same as the global version. When interpreting local autocorrelation measures, it is important to consider both the effect size estimates and the significance level. Since the significance level is calculated for each spot separately, it is recommended to adjust for multiple testing. By default, `runUnivariate` uses the Benjamini & Hochberg correction. The local Moran's I statistics reveal locations in the tissue that have similar values to their neighbours (c.f., the lower part of the tissue).
 
 Your turn: try to recalculate the local Moran's I with gene *Myh1*. What do you notice?
+
+```{r}
+#| eval: false #remove this line when you want to execute the chunck
+
+sfe_tissue <- runUnivariate(...)
+```
+
 
 ```{r}
 #| include: false
@@ -291,28 +306,29 @@ plotLocalResult(sfe_tissue, "localmoran",
 )
 ```
 
-## Advanced: Bivariate Moran's I
+### Advanced -- Bivariate Moran's I
 
 There exists also a bivariate version of Moran's I. The package `spatialDM` [@liSpatialDMRapidIdentification2023] uses an adapted version of bivariate Moran's I to identify ligand-receptor pairs.
 
 For two continous observation the global bivariate Moran's I is defined as [@wartenbergMultivariateSpatialCorrelation1985 ; @bivandPackagesAnalyzingSpatial2022]
 
-$$I_B = \frac{\Sigma_i(\Sigma_j{w_{ij}y_j\times x_i})}{\Sigma_i{x_i^2}}$$
+$$I_B = \frac{\Sigma_i(\Sigma_j{w_{ij}b_j\times a_i})}{\Sigma_i{b_i^2}}$$
 
-where $x_i$ and $y_i$ are the two variables of interest and $w_{ij}$ is the value of the spatial weights matrix for positions $i$ and $j$. It is a measure of the correlation of the variables $x$ with the the average of the neighboring values for variable $y$ (also called the spatial lag of $y$).
+where $a_i$ and $b_i$ are the two variables of interest and $w_{ij}$ is the value of the spatial weights matrix for positions $i$ and $j$. It is a measure of the correlation of the variables $a$ with the the average of the neighboring values for variable $b$ (also called the spatial lag of $b$).
 
 There exists a local version that we will explore here. Note that the results are not symmetric, but very similar to each other.
 
 ```{r}
-sfe_tissue <- runBivariate(sfe_tissue, "localmoran_bv", c("Myh1", "Myh2"), # wraps the method from spdep
+sfe_tissue <- runBivariate(sfe_tissue, "localmoran_bv", # wraps the method from spdep
+  c("Myh1", "Myh2"),
   swap_rownames = "symbol", nsim = 1000
 )
 
+# this command gives all results of localmoran_bv
 localResultFeatures(sfe_tissue, "localmoran_bv")
 
 plotLocalResult(sfe_tissue, "localmoran_bv", c("Myh1__Myh2", "Myh2__Myh1"),
-  colGeometryName = "spotPoly",
-  divergent = TRUE, diverge_center = 0
+  colGeometryName = "spotPoly", divergent = TRUE, diverge_center = 0
 )
 ```
 
@@ -320,7 +336,7 @@ Compare the results to the local Moran's I plots for genes *Myh1* and *Myh2*. Wh
 
 Please note that the result might overestimate the spatial autocorrelation of the variables due to the inherent (non-spatial) correlation of $x$ and $y$ [@bivandPackagesAnalyzingSpatial2022].
 
-# Impact of neighbourhood on autocorrelation measures
+## Impact of neighbourhood on autocorrelation measures
 
 Let's compare the impact of different neighbourhood matrices on local autocorrelation analysis. In this Visium dataset we do not have gene expression information for each cell because of the resolution of the spots. We will instead calculate the autocorrelation measures on the area of the segmented cells. This could be heplful when looking at local cell densities in a tissue.
 
@@ -334,11 +350,11 @@ sfe_tissue <- annotGeometryUnivariate(sfe_tissue, "localmoran", "area",
   name = "myofiber_poly2nb"
 )
 
-plotLocalResult(sfe_tissue, "myofiber_poly2nb", "area",
+pPoly <- plotLocalResult(sfe_tissue, "myofiber_poly2nb", "area",
   annotGeometryName = "myofiber_simplified",
   annotGraphName = "myofiber_poly2nb",
   divergent = TRUE, diverge_center = 0
-)
+) + labs(title = "Local Moran's I (li)\nContiguous Neighbours")
 ```
 
 As an alternative, we also base the neighbourhood matrix on the 5 nearest neighbours.
@@ -351,14 +367,27 @@ sfe_tissue <- annotGeometryUnivariate(sfe_tissue, "localmoran", "area",
   name = "knn5"
 )
 
-plotLocalResult(sfe_tissue, "knn5", "area",
+pKnn5 <- plotLocalResult(sfe_tissue, "knn5", "area",
   annotGeometryName = "myofiber_simplified",
   annotGraphName = "knn5",
   divergent = TRUE, diverge_center = 0
-)
+) + labs(title = "Local Moran's I (li)\n5 Nearest Neighbours (knn5)")
 ```
 
-What do you notice? What happens if we set the nearest neighbourhood graph to 10 nearest neighbours?
+```{r}
+pPoly + pKnn5
+```
+
+Your turn: What happens if we set the nearest neighbourhood graph to 10 nearest neighbours? What do you notice?
+
+```{r}
+#| eval: false #remove this line when you want to execute the chunck
+
+annotGraph(sfe_tissue, "knn10") <-
+  findSpatialNeighbors(...)
+
+plotLocalResult(...)
+```
 
 # Summary and Considerations
 
